<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lemycanh.geoquiz.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_questionlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_list"
            android:layout_toLeftOf="@+id/btn_cheat"/>

        <Button
            android:id="@id/btn_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat"
            android:layout_alignParentRight="true"/>

        <LinearLayout
            android:id="@+id/question_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cauhoi" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/traloidung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/dung"/>
                <Button
                    android:id="@+id/traloisai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/sai"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_main">
            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/previous"/>
            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/next"/>
        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
